<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_date_newest"
                android:title="@string/sort_by_date_newest"
                android:checkable="true"/>
            <item
                android:id="@+id/sort_date_oldest"
                android:title="@string/sort_by_date_oldest"
                android:checkable="true"/>
            <item
                android:id="@+id/sort_name_asc"
                android:title="@string/sort_by_name_asc"
                android:checkable="true"/>
            <item
                android:id="@+id/sort_name_desc"
                android:title="@string/sort_by_name_desc"
                android:checkable="true"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_select_all"
        android:title="@string/menu_select_all"
        app:showAsAction="never"/>
</menu>