<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_arrow_back"
        android:title="@string/back"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_arrow_forward"
        android:title="@string/forward"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_reload"
        android:title="@string/reload"
        app:showAsAction="always"/>
</menu>
