<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <EditText
        android:id="@+id/find_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/find_in_page"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/find_prev"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/find_previous"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back" />

    <ImageButton
        android:id="@+id/find_next"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/find_next"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_forward" />

    <ImageButton
        android:id="@+id/find_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/clear"
        android:padding="8dp"
        android:src="@drawable/ic_close" />
</LinearLayout>
